--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <button id="letterBtn" onclick="openLetter()">💌</button>
 
-<div class="modal-overlay" id="letterModal">
+    <div class="modal-overlay" id="letterModal">
         <div class="modal-box letter-box">
             <span class="close-btn" onclick="closeLetter()">&times;</span>
             <h2>Untuk Naura,</h2>
@@ -92,15 +92,13 @@
                 </p>
                 <p>
                     Biar kamu inget, kalau di balik hari-hari sibukmu itu, 
-                    <b>banyak banget momen kecil yang bikin bahagia.</b>
+                    banyak banget momen kecil yang bikin bahagia.
                 </p>
                 <br>
                 <p style="text-align: right;"><b>^_^</b></p>
             </div>
         </div>
     </div>
-
-    <button id="scrollToTopBtn" onclick="scrollToTop()">⬆️</button>
 
     <div class="music-container">
         <audio id="bgMusic" loop>
